# vja

./: .editorconfig  .gitignore  .gitlab-ci.yml  .releaserc  .releaserc.yml  CHANGELOG.md  CONTRIBUTING.md  Features.md  README.md  Readme.md  package-lock.json  package.json  pyproject.toml  renovate.json  requirements_ci.txt  requirements_dev.txt  setup.cfg  setup.py
.config/vja/: config.rc
.vjacli/: vja.rc
ci/: build-install.sh  virtual-env.sh
test/integration/: docker-compose.yml  run.sh
tests/: conftest.py  docker-compose.yml  run.sh  test_basic.py  test_bucket.py  test_command.py  test_command_helpers.py  test_label.py  test_project.py  test_query.py  test_relation.py  test_relation_display.py  test_task_add.py  test_task_clone.py  test_task_defer.py  test_task_delete.py  test_task_done.py  test_task_edit_assignee.py  test_task_edit_general.py  test_task_edit_reminder.py  test_task_ls.py  test_task_ls_filter.py  test_task_multiple_tasks.py  test_task_show.py  test_user.py  test_vja.py
tests/.vjatest/: config.rc  vja.rc
tests/.vjatest_dind/: config.rc  vja.rc
vja/: __init__.py  apiclient.py  application.py  authenticate.py  cli.py  config.py  filter.py  list_service.py  login.py  model.py  output.py  parse.py  project_service.py  service.py  service_command.py  service_query.py  task_service.py  urgency.py
vja/adapter/: apiclient.py  authenticate.py
vja/commands/: bucket.py  label.py  project.py  relation.py  task.py  user.py
vja/service/: project_service.py  service_command.py  service_query.py  task_filter.py  task_service.py
