[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vja"
version = "4.10.0"
description = "A simple CLI for Vikunja task manager"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ce72" }
]
license = { text = "GNU General Public License v3 (GPLv3)" }
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
  "click>=8.1",
  "click-aliases>=1",
  "requests>=2.32",
  "parsedatetime>=2.6",
  "python-dateutil>=2.8",
]

[project.scripts]
vja = "vja.cli:cli"

[tool.setuptools.packages.find]
include = ["vja*"]
