[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vja"
version = "5.2.1"
description = "A simple CLI for Vikunja task manager"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ce72" }
]
license = "GPL-3.0-or-later"
license-files = [ "LICENSE" ]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "click>=8.1",
  "click-aliases>=1",
  "requests>=2.32",
  "parsedatetime>=2.6",
  "python-dateutil>=2.8",
  "PyJWT>=2.8",
]

[project.scripts]
vja = "vja.cli:cli"

[project.urls]
Homepage = "https://gitlab.com/ce72/vja"
Repository = "https://gitlab.com/ce72/vja.git"
Issues = "https://gitlab.com/ce72/vja/-/issues"
Changelog = "https://gitlab.com/ce72/vja/-/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["vja*"]
